client full call and display (#1)
